--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,8 @@ deps =
     .[test]
 commands =
     check-manifest --ignore 'tox.ini,tests,tests/**'
+	rm -rf dist
+	python setup.py sdist
     twine check dist/*
     flake8 .
     py.test tests {posargs}
