--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@
 #  and also to help confirm pull requests to this project.
 
 [tox]
-envlist = py{3.6,3.7,3.8,3.9}
+envlist = py{36,37,38,39}
 
 # Define the minimal tox version required to run;
 # if the host tox is less than this the tool with create an environment and
@@ -31,9 +31,7 @@ deps =
     .[test]
 commands =
     check-manifest --ignore 'tox.ini,tests,tests/**'
-    rm -rf dist
-    python setup.py sdist
-    twine check dist/*
+    {envpython} setup.py check -m
     flake8 .
     py.test tests {posargs}
 
